sg.tf
resource "aws_security_group" "jenkins_controler_sg" {
  name        = "jenkins_controler_sg"
  description = "Allow SSH, HTTP, HTTPS traffic"
  vpc_id      = "vpc-092b6875a28958408"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Jenkins-Controller-SG"
  }
}

resource "aws_security_group" "jenkins_agent1_sg" {
  name        = "jenkins_agent1_sg"
  description = "Allow SSH, HTTP, HTTPS traffic"
  vpc_id      = "vpc-092b6875a28958408"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Jenkins-Node1-SG"
  }
}
